# esp32-demo

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  main.c  partitions.csv  sdkconfig
components/proton/: CMakeLists.txt
components/tests/: CMakeLists.txt  bt-scan.c  camera.c  player.c  speaker.c  wav.c
components/tests/include/: test.h
main/: CMakeLists.txt  config.h  main.c
test/: bt-scan.c  camera.c  player.c  speaker.c  test.h  wav.c
